--- a/kresd.conf
+++ b/kresd.conf
@@ -1,8 +1,24 @@
--- Default empty Knot DNS Resolver configuration in -*- lua -*-
--- Bind ports as privileged user (root) --
-net = {'127.0.0.1', '::53' }
--- Switch to unprivileged user --
-   user('knot-resolver','knot-resolver')
--- Unprivileged
-cache.size = 100*MB
-cache.clear ()
+-- SPDX-License-Identifier: CC0-1.0
+-- vim:syntax=lua:set ts=4 sw=4:
+-- Refer to manual: https://knot-resolver.readthedocs.org/en/stable/
+
+-- Network interface configuration
+net.listen('127.0.0.1', 53, { kind = 'dns' })
+net.listen('127.0.0.1', 853, { kind = 'tls' })
+--net.listen('127.0.0.1', 443, { kind = 'doh2' })
+net.listen('::1', 53, { kind = 'dns', freebind = true })
+net.listen('::1', 853, { kind = 'tls', freebind = true })
+--net.listen('::1', 443, { kind = 'doh2' })
+
+-- Load useful modules
+modules = {
+        'hints > iterate',  -- Allow loading /etc/hosts or custom root hints
+        'stats',            -- Track internal statistics
+        'predict',          -- Prefetch expiring/frequent records
+}
+
+-- Cache size
+-- cache.size = 100 * MB
+-- cache.size = 0
+-- log_level('debug')
+-- log_target('stdout')
